//
// DISCLAIMER
//
// Copyright 2024 ArangoDB GmbH, Cologne, Germany
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright holder is ArangoDB GmbH, Cologne, Germany
//

syntax = "proto3";

package scheduler;

import "integrations/scheduler/v1/definition/common.proto";

option go_package = "github.com/arangodb/kube-arangodb/integrations/scheduler/v1/definition";

// Keeps information about Kubernetes Batch/V1 Job
message Deployment {
  // defines object status metadate
  StatusMetadata metadata = 1;

  // Keeps Deployment settings
  DeploymentSpec spec = 2;

  // Keeps current Deployment Status
  optional DeploymentStatus status = 3;
}

// Information about Deployment run settings
message DeploymentSpec {
  // Number of Pods which are started within a deployment. Defaults to 1
  optional int32 replicas = 1;
}

// Information about Deployment Status
message DeploymentStatus {

  // Total number of non-terminated pods targeted by this deployment (their labels match the selector).
  int32 replicas = 1;

  // Total number of non-terminated pods targeted by this deployment that have the desired template spec.
  int32 updated_replicas = 2;

  // readyReplicas is the number of pods targeted by this Deployment with a Ready Condition.
  int32 ready_replicas = 3;

  // Total number of available pods (ready for at least minReadySeconds) targeted by this deployment.
  int32 available_replicas = 4;

  // Total number of unavailable pods targeted by this deployment. This is the total number of
  // pods that are still required for the deployment to have 100% available capacity. They may
  // either be pods that are running but not yet available or pods that still have not been created.
  int32 unavailable_replicas = 5;
}
